First redesign to locate all these screen shot control point lists at a central location - doesn't work yet

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -40,7 +40,7 @@
         <item>Verschieben</item>
         <item>Entfernen</item>
         <item>Löschen</item>
-        <!-- <item>Demo</item> -->   <!-- just for generating screenshots -->
+        <item>Demo</item>   <!-- just for generating screenshots -->
     </string-array>
 
     <!-- miscellaneous -->
