Tested Demo Activity on pause and resume --- should work now correctly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
         <item>Edit</item>
         <item>Delete</item>
         <item>Clear</item>
-        <item>Demo</item>   <!-- just for generating screenshots -->
+        <!--  <item>Demo</item>   --> <!-- just for generating screenshots -->
     </string-array>
 
     <!-- miscellaneous -->
