--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
 <resources>
     <string name="app_name">De Casteljau Bézier Curve Simulation</string>
     <string name="app_name_for_app_drawer">Bézier Splines</string>
-    <string name="app_version">Version 2.0 &#8213; &#169; Peter Loos</string>
+    <string name="app_version">Version 2.1 &#8213; &#169; Peter Loos</string>
+    <string name="app_version_date">October 9, 2017</string>
 
     <!-- activities -->
     <string name="app_main_title">Bézier Curve Simulation</string>
