--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,8 @@
     <string name="resolution">Resolution:</string>
     <string name="t">t:</string>
     <string name="action_settings">Settings</string>
+    <string name="action_store">Store</string>
+    <string name="action_load">Load</string>
     <string name="action_about">About</string>
     <string name="action_demo">Demo</string>
     <string name="action_documentation">Documentation</string>
@@ -30,6 +32,7 @@
     <!-- shared preferences -->
     <string name="shared_pref_strokewidthfactor">StrokeWidthFactor</string>
     <string name="shared_pref_gridlines">Gridlines</string>
+    <string name="shared_pref_spline">SavedSpline</string>
 
     <!-- state changes according to settings activity -->
     <string name="result_gridlines">ResultGridlines</string>
