--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,6 +79,7 @@
         <item>App modes</item>
         <item>Curve resolution</item>
         <item>Algorithm of de Casteljau</item>
+        <item>Saving and loading a spline</item>
     </string-array>
 
     <!-- documentation: description -->
@@ -124,6 +125,15 @@
                  auxiliary points of the <em>Casteljau</em> scheme are calculated for the construction of the current Bézier point
                  and additionally displayed in this view. This is of course only possible for a particular parameter <em>t</em> in the interval [0,1].
                  Use the second slider bar at the bottom (labelled &bdquo;t&ldquo;) to set this value.
+            ]]>
+        </item>
+        <item>
+            <![CDATA[
+                 Mit dieser Version ist es möglich, den aktuell gezeichneten Spline abzuspeichern (Anzahl des Menüpunkts &bdquo;<em>Speichern</em>&ldquo;).
+                 Bei Anwahl des Menüpunkts &bdquo;<em>Laden</em>&ldquo; wird der zuletzt abgespeicherte Spline in die Ansicht geladen.
+
+                 The current spline can be saved upon selecting the menu item &bdquo;<em>Saving</em>&ldquo;
+                 If you select &bdquo;<em>Loading</em>&ldquo;, the last saved spline will be restored in the view.
             ]]>
         </item>
     </string-array>
