Minor changes ---- added missing point in english text (strings.xml)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,7 +129,7 @@
         </item>
         <item>
             <![CDATA[
-                 The current spline can be saved upon selecting the menu item &bdquo;<em>Saving</em>&ldquo;
+                 The current spline can be saved upon selecting the menu item &bdquo;<em>Saving</em>&ldquo;.
                  If you select &bdquo;<em>Loading</em>&ldquo;, the last saved spline will be restored in the view.
             ]]>
         </item>
