--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="title_activity_documentation">Documentation</string>
     <string name="title_activity_demo">Demo</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_console">Bézier Console</string>
 
     <!-- views -->
     <string name="resolution">Resolution:</string>
