--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
 <resources>
     <string name="app_name">De Casteljau Bézier Curve Simulation</string>
     <string name="app_name_for_app_drawer">Bézier Splines</string>
-    <string name="app_version">Version 3.0 &#8213; &#169; Peter Loos</string>
-    <string name="app_version_date">October 21, 2017</string>
+    <string name="app_version">Version 3.1 &#8213; &#169; Peter Loos</string>
+    <string name="app_version_date">September 25, 2018</string>
 
     <!-- activities -->
     <string name="app_main_title">Bézier Curve Simulation</string>
@@ -25,7 +25,7 @@
     <string name="action_demo">Demo</string>
     <string name="action_documentation">Documentation</string>
     <string name="action_console">Console</string>
-    <string name="about_link">peterloos.de</string>
+    <string name="about_link">peterloos.de/consulting/</string>
     <string name="button_stop">Stop</string>
     <string name="button_restart">Restart</string>
     <string name="show_construction">Show Construction</string>
